--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
+    "chart.js": "^4.4.0",
+    "date-fns": "^2.30.0",
+    "postcss": "^8.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.0",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
-    "date-fns": "^2.30.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "typescript": "^4.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,4 +45,4 @@
   "devDependencies": {
     "@types/jest": "^27.5.0"
   }
-} 
+}
